Cambios en mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Despliegue de aplicaciones web
-site_url: https://mydomain.org/mysite
+site_url: https://jpradillo.github.io/DEAW/index1/
 theme:
   name: material
   features:
